# Mailing_Service

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  logger.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mail.py  start_scheduler.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options.py  0003_alter_mailingattempt_status_mailingunit_and_more.py  0004_alter_mailingunit_receivers.py  0005_alter_mailingunit_receivers.py  0006_alter_mailingunit_finished_at_alter_message_body.py  0007_alter_mailingunit_message_alter_mailingunit_status.py  0008_alter_mailingattempt_options_and_more.py  0009_mailingunit_owner.py  0010_alter_mailingunit_options.py  0011_alter_mailingattempt_options_and_more.py  0012_mailreceiver_owner.py  0013_message_owner.py  0014_alter_mailingattempt_options.py
mailing/templates/mailing/: base.html  home.html  mailing_attempts_list.html
mailing/templates/mailing/includes/: header.html
mailing/templates/mailing/mail_receiver/: mail_receiver_create.html  mail_receiver_delete.html  mail_receiver_form.html  (+3 more)
templates/: base.html
users/: forms.py  logger.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_managers_group.py  createadmin.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_avatar_and_more.py  0003_alter_customuser_options.py
users/templates/: all_users.html  edit_profile.html  login.html  logout.html  register.html  user_profile.html
users/templates/users/: login.html
(+13 files in other folders)
